--- a/MultilingualResources/CryptoPortfolioTracker.nl.xlf
+++ b/MultilingualResources/CryptoPortfolioTracker.nl.xlf
@@ -926,6 +926,10 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
           <source>Version</source>
           <target state="final">Versie</target>
         </trans-unit>
+        <trans-unit id="Navigation_DashBoard.Content" translate="yes" xml:space="preserve">
+          <source>Dashboard</source>
+          <target state="final">Dashboard</target>
+        </trans-unit>
       </group>
     </body>
   </file>
